libgphoto2 2.5.9.1 development tree

ptp2:
* allow generic opcode commands with parameters, config variable "opcode"
* fixed pretending that Nikon Coolpix S series is a Nikon 1 S.
* Nikon: fixed problem with SDRAM capture
* Canon EOS: handle "no focus" during capture
* Canon Powershot: handle lack of object protection setting
* added size checking for unpacking primitives
* New ids:
  * Imported Media Players and Android phones from libmtp
  * Sony Alpha A7S II, ILCE 7M2
  * Nikon Coolpix L840
  * Olympus TG-620
  * Canon EOS 1D C, 750D
  * Fuji Film X-T1, X-T10, A-610


pentax:
* fixed some crashes on non-existing config variables
* use portable directory api (helps Visual Studio)

libgphoto2_port/vusb:
* Implemented a virtual PTP camera for test purposes.

libgphoto2_port/disk:
* Support exfat fuse filesystems.

all:
* fixed various issues found by Coverity static analyzer
* removed unistd.h headers where not needed to help Visual Studio

translations:
* updated swedish, brazilian portuguese, danish, polish, ukrainian, vietnamese

------------------------------------------------------------------------------
libgphoto2 2.5.9 release

Now maintained (source and issue tracker) in GIT at https://github.com/gphoto/libgphoto2 

ptp2:
* PTP/IP: fixes to support Ricoh Theta and Sony Alpha over WLAN better
* unification of timeout with backoff handling
* Canon EOS: fixed a timeout bug on wait_event
* Canon EOS: report protection status correctly
* Canon EOS: unlock the ui on close
* Sony: bulb mode support (in manual mode, shutterspeed and bulb option)
* Hook up PTP OpenCapture opcode
* Nikon J5 support. Nikon now hides prop and opcodes even differently.
* Added USB IDs:
  - Sony SLT A77V, A7R2, HDR-PJ260VE
  - Nikon DSLR D5500
  - Canon EOS 760D, 5Ds, 5Ds R
  - Nikon Coolpix AW110, S6300, S6800, S3700, S2900
  - Nikon 1 S2, J5
  - Ricoh Theta m15 (USB and WLAN)
  - GoProp Hero 4

canon:
* readd old Canon IXUS 30.

translations: