@@ -32,15 +32,18 @@ gp_camera_free
 gp_camera_get_abilities
 gp_camera_get_about
 gp_camera_get_config
+gp_camera_get_single_config
 gp_camera_get_manual
 gp_camera_get_port_info
 gp_camera_get_port_speed
 gp_camera_get_summary
 gp_camera_init
+gp_camera_list_config
 gp_camera_new
 gp_camera_ref
 gp_camera_set_abilities
 gp_camera_set_config
+gp_camera_set_single_config
 gp_camera_set_port_info
 gp_camera_set_port_speed
 gp_camera_set_timeout_funcs
